<resources>
    <string name="app_name">Калькулятор</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="equals">=</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">–</string>
    <string name="clear">C</string>
    <string name="zero">0</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="pow">x^y</string>
    <string name="sqrt">√x</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="simple">простые операции</string>
    <string name="difficult">сложные операции</string>
    <string name="spinner_title">История</string>
</resources>