<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/firstNumber"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12pt"
        app:layout_constraintEnd_toStartOf="@id/secondNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondNumber"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12pt"
        app:layout_constraintEnd_toStartOf="@id/result"
        app:layout_constraintStart_toEndOf="@id/firstNumber"
        app:layout_constraintTop_toTopOf="@id/firstNumber" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/secondNumber"
        app:layout_constraintTop_toTopOf="@id/secondNumber"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12pt"/>

    <TableLayout
        android:id="@+id/buttonTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondNumber">

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seven"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:backgroundTintMode="add"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eight"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nine"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equals"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/equals" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/four"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/four"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/five"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/five"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/six"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plus"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/plus" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/two"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/three"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/minus"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/minus" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zero"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiply"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divide"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@drawable/button_background"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/divide" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>